@@ -2,6 +2,8 @@
 - Added last_modified accessor to Template,
   returns the time.time() when the module
   was created. [ticket:97]
+- Fixed lexing support for whitespace
+  around '=' sign in defs. [ticket:102]
   
 0.2.4
 - Fixed compatibility with Jython 2.5b1.
